--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MCS Tracker</title>
+    <title>%VITE_APP_TITLE%</title>
     <link rel="icon" type="image/x-icon" href="/favicon.svg">
   </head>
   <body>
